Implement getURLsFromHTML function

--- a/server/package.json
+++ b/server/package.json
@@ -31,5 +31,8 @@
   "homepage": "https://github.com/davidumoru/scryer#readme",
   "devDependencies": {
     "jest": "^29.7.0"
+  },
+  "dependencies": {
+    "jsdom": "^24.0.0"
   }
 }
