Adjust dir location and import path

--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Server files for scryer",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node app/index.js",
     "test": "jest"
   },
   "repository": {
