Install express and setup server

--- a/server/package.json
+++ b/server/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node app/index.js",
+    "dev": "nodemon app/index.js",
     "test": "jest"
   },
   "repository": {
@@ -30,11 +31,15 @@
   },
   "homepage": "https://github.com/davidumoru/scryer#readme",
   "devDependencies": {
-    "jest": "^29.7.0"
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.0"
   },
   "dependencies": {
     "@google/generative-ai": "^0.3.1",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "express": "^4.19.2",
     "jsdom": "^24.0.0"
   }
 }
