--- a/server/package.json
+++ b/server/package.json
@@ -36,10 +36,13 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.3.1",
+    "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jsdom": "^24.0.0"
+    "jsdom": "^24.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.2.4"
   }
 }
