--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@types/react": "18.2.73",
     "@types/react-dom": "18.2.23",
     "autoprefixer": "10.4.19",
+    "axios": "^1.6.8",
     "class-variance-authority": "^0.7.0",
     "eslint": "8.57.0",
     "eslint-config-next": "14.1.4",
