--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "postcss": "8.4.38",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^10.0.5",
     "tailwind-merge": "^2.2.2",
     "tailwindcss": "3.4.3",
     "tailwindcss-animate": "^1.0.7",
