--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@vercel/analytics": "^1.3.1",
+    "axios": "^1.7.7",
     "core-js": "^3.8.3",
     "vue": "^3.2.13"
   },
