Add CORS middleware

--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.7",
     "cheerio": "^1.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "valid-url": "^1.0.9"
