--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@vercel/analytics": "^1.3.1",
     "axios": "^1.7.7",
     "core-js": "^3.8.3",
+    "marked": "^14.1.2",
     "vue": "^3.2.13"
   },
   "devDependencies": {
